added new player, youtube like player

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Turret+Road:wght@200;300;400;500;700;800&display=swap");
-@import "~@flaticon/flaticon-uicons/css/all/all";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,18 +6,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   @apply flex min-h-screen flex-col scroll-smooth transition-all;
 }
 
-:root {
-  --st-min-w: 180px;
-  --st-max-w: 320px;
-}
-
-.no-scrollbar::-webkit-scrollbar {
+/* .no-scrollbar::-webkit-scrollbar {
   @apply h-0 w-0;
 }
 
@@ -29,16 +23,12 @@ body {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   @apply rounded-full bg-slate-400;
-}
+} */
 
 .animate-fade {
   @apply transition-all;
   animation: animation-fade 1s linear;
   animation-fill-mode: forwards;
-}
-
-.gradient-text {
-  @apply bg-gradient-to-br bg-clip-text text-transparent;
 }
 
 @keyframes animation-fade {
